{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 102,
  "lineage": "a77cbfa6-b35c-259f-aa0f-917822b4bcf8",
  "resources": [
    {
      "module": "module.argocd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "150035",
                "uid": "b467d95b-7c19-4122-9829-d9d0f6c78680"
              }
            ]
          },
          "dependencies": [
            "module.kubernetes.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.kubernetes.module.eks.aws_security_group.workers",
            "module.kubernetes.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.kubernetes.module.eks.data.aws_partition.current",
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.kubernetes.module.eks.aws_iam_role.cluster",
            "module.kubernetes.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.kubernetes.module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.network.module.vpc.aws_subnet.private",
            "module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.kubernetes.module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.kubernetes.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.kubernetes.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.network.data.template_file.private",
            "data.aws_eks_cluster.cluster",
            "module.kubernetes.module.eks.aws_cloudwatch_log_group.this",
            "module.kubernetes.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.kubernetes.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.kubernetes.module.eks.data.http.wait_for_cluster",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_eks_cluster_auth.cluster",
            "module.kubernetes.module.eks.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:security-group/sg-0cda9f254a14418b4",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cda9f254a14418b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08599a80ca5dcf547"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "kubeflow20210927132636931500000001",
            "name_prefix": "kubeflow",
            "owner_id": "245582572290",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "kubeflow-eks_cluster_sg",
              "Project": "sak"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "kubeflow-eks_cluster_sg",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:security-group/sg-08599a80ca5dcf547",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08599a80ca5dcf547",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cda9f254a14418b4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cda9f254a14418b4"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "kubeflow20210927132636932100000002",
            "name_prefix": "kubeflow",
            "owner_id": "245582572290",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "kubeflow-eks_worker_sg",
              "Project": "sak",
              "kubernetes.io/cluster/kubeflow": "owned"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "kubeflow-eks_worker_sg",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "kubernetes.io/cluster/kubeflow": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-193074777",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cda9f254a14418b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-323690587",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cda9f254a14418b4",
            "self": false,
            "source_security_group_id": "sg-08599a80ca5dcf547",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.workers",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2725706463",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08599a80ca5dcf547",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.workers",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2064920746",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08599a80ca5dcf547",
            "self": false,
            "source_security_group_id": "sg-0cda9f254a14418b4",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.workers",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2734369547",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08599a80ca5dcf547",
            "self": false,
            "source_security_group_id": "sg-0cda9f254a14418b4",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.workers",
            "module.network.module.vpc.aws_vpc.this",
            "module.kubernetes.module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-404041979",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08599a80ca5dcf547",
            "self": false,
            "source_security_group_id": "sg-08599a80ca5dcf547",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.workers",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ea879488ad0123bf",
            "domain": "vpc",
            "id": "eipalloc-0289a5225dc1ad822",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-049d51cd209cbb595",
            "private_dns": "ip-10-10-0-100.eu-north-1.compute.internal",
            "private_ip": "10.10.0.100",
            "public_dns": "ec2-13-51-228-47.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.228.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "development",
              "Name": "development-kubeflow",
              "Project": "sak",
              "Terraform": "true"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "development-kubeflow",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.private"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:internet-gateway/igw-031b9683b6b901065",
            "id": "igw-031b9683b6b901065",
            "owner_id": "245582572290",
            "tags": {
              "Environment": "development",
              "Name": "development-kubeflow",
              "Project": "sak",
              "Terraform": "true"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "development-kubeflow",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0289a5225dc1ad822",
            "connectivity_type": "public",
            "id": "nat-0d44a2343d92acc35",
            "network_interface_id": "eni-049d51cd209cbb595",
            "private_ip": "10.10.0.100",
            "public_ip": "13.51.228.47",
            "subnet_id": "subnet-07428f4d78fbedf87",
            "tags": {
              "Environment": "development",
              "Name": "development-kubeflow",
              "Project": "sak",
              "Terraform": "true"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "development-kubeflow",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.private",
            "module.network.data.template_file.public",
            "module.network.module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed3d4fb48961ea191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d44a2343d92acc35",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed3d4fb48961ea19",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.data.template_file.private",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.public"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-031b9683b6b901065",
            "id": "r-rtb-001d587a3c2ea96bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-001d587a3c2ea96bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.public"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:route-table/rtb-0ed3d4fb48961ea19",
            "id": "rtb-0ed3d4fb48961ea19",
            "owner_id": "245582572290",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d44a2343d92acc35",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "development-kubeflow",
              "Project": "sak",
              "Terraform": "true"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "development-kubeflow",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:route-table/rtb-001d587a3c2ea96bd",
            "id": "rtb-001d587a3c2ea96bd",
            "owner_id": "245582572290",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031b9683b6b901065",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "development-kubeflow",
              "Project": "sak",
              "Terraform": "true"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "development-kubeflow",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fb61df014e88bd8",
            "route_table_id": "rtb-0ed3d4fb48961ea19",
            "subnet_id": "subnet-0c0e47accfeee3b64"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00091549601d67f8c",
            "route_table_id": "rtb-0ed3d4fb48961ea19",
            "subnet_id": "subnet-00a09def3ac09c75e"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.private",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cfe7abc82e5cf61",
            "route_table_id": "rtb-001d587a3c2ea96bd",
            "subnet_id": "subnet-07428f4d78fbedf87"
          },
          "dependencies": [
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.public",
            "module.network.module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016bbc53f18ae15b4",
            "route_table_id": "rtb-001d587a3c2ea96bd",
            "subnet_id": "subnet-0c3d8b209de473a32"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.public",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:subnet/subnet-0c0e47accfeee3b64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.10.200.0/24",
            "id": "subnet-0c0e47accfeee3b64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245582572290",
            "tags": {
              "Environment": "development",
              "Name": "development-kubeflow-private",
              "Project": "sak",
              "Terraform": "true",
              "kubernetes.io/cluster/kubeflow": "shared"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "development-kubeflow-private",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true",
              "kubernetes.io/cluster/kubeflow": "shared"
            },
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:subnet/subnet-00a09def3ac09c75e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.10.201.0/24",
            "id": "subnet-00a09def3ac09c75e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245582572290",
            "tags": {
              "Environment": "development",
              "Name": "development-kubeflow-private",
              "Project": "sak",
              "Terraform": "true",
              "kubernetes.io/cluster/kubeflow": "shared"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "development-kubeflow-private",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true",
              "kubernetes.io/cluster/kubeflow": "shared"
            },
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:subnet/subnet-07428f4d78fbedf87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-07428f4d78fbedf87",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245582572290",
            "tags": {
              "Environment": "development",
              "KubernetesCluster": "kubeflow",
              "Name": "development-kubeflow-public",
              "Project": "sak",
              "Terraform": "true",
              "kubernetes.io/cluster/kubeflow": "shared",
              "kubernetes.io/role/elb": ""
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "KubernetesCluster": "kubeflow",
              "Name": "development-kubeflow-public",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true",
              "kubernetes.io/cluster/kubeflow": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:subnet/subnet-0c3d8b209de473a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0c3d8b209de473a32",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245582572290",
            "tags": {
              "Environment": "development",
              "KubernetesCluster": "kubeflow",
              "Name": "development-kubeflow-public",
              "Project": "sak",
              "Terraform": "true",
              "kubernetes.io/cluster/kubeflow": "shared",
              "kubernetes.io/role/elb": ""
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "KubernetesCluster": "kubeflow",
              "Name": "development-kubeflow-public",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true",
              "kubernetes.io/cluster/kubeflow": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-0e48f18b16abfbd9b"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.template_file.public"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:245582572290:vpc/vpc-0e48f18b16abfbd9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-003d5a26eecd49b17",
            "default_route_table_id": "rtb-03f01f9081234218a",
            "default_security_group_id": "sg-08b7beb0f8c907888",
            "dhcp_options_id": "dopt-f91ecc90",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e48f18b16abfbd9b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03f01f9081234218a",
            "owner_id": "245582572290",
            "tags": {
              "Environment": "development",
              "Name": "development-kubeflow",
              "Project": "sak",
              "Terraform": "true"
            },
            "tags_all": {
              "ENV": "development",
              "Environment": "development",
              "Name": "development-kubeflow",
              "OWNER": "rgimadiev",
              "PRJ": "SAK",
              "Project": "sak",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}